--- a/website code/index.html
+++ b/website code/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio website</title>
+	<title>Life solver website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,28 +15,25 @@
 
 	<div class="hero">
 		<nav>
-			<h2 class="logo">Portfo<span>lio</span></h2>
+			<h2 class="logo">H<span>&</span>D</h2>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About Us</a></li>
-				<li><a href="#">Services</a></li>
+				<li><a href="#" class ="backgroundsquare">Services</a></li>
 				<li><a href="#">Skills</a></li>
 				<li><a href="#">Contact Us</a></li>
 			</ul>
-			<a href="#" class="btn">Subscribe</a>
+			<a href="#" class="btn">EN/中</a>
 		</nav>
 
 		<div class="content">
-			<h4>Hello, my name is</h4>
-			<h1>Tahmid <span>Ahmed</span></h1>
-			<h3>I'am a Web Developer.</h3>
-			<div class="newslatter">
-				<form>
-					<input type="email" name="email" id="mail" placeholder="Enter Your Email">
-					<input type="submit" name="submit" value="Lets Start">
-				</form>
-			</div>
+			
+			<h1>H<span>&</span>D</h1>
+			<h3>More than life.</h3>
 		</div>
+		
+			
+		
 	</div>
 
 	<!----About section start---->
