Linking the pages

--- a/website code/index.html
+++ b/website code/index.html
@@ -15,13 +15,14 @@
 
 	<div class="hero">
 		<nav>
-			<h2 class="logo">H<span>&</span>D</h2>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#" class ="backgroundsquare">Services</a></li>
-				<li><a href="#">Skills</a></li>
-				<li><a href="#">Contact Us</a></li>
+			<li><a href="index.html" class="logo">H<span>&</span>D</a></li>
+			</ul>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href = #service class ="backgroundsquare">Services</a></li>
+				<li><a href= "furnture.html">About Us</a></li>
+				<li><a href= #contact>Contact Us</a></li>
 			</ul>
 			<a href="#" class="btn">EN/中</a>
 		</nav>
@@ -50,6 +51,8 @@
 	</section>
 
 	<!-----service section start----------->
+<section  id = "service">
+
 	<div class="service">
 		<div class="title">
 			<h2>Our Services</h2>
@@ -93,23 +96,19 @@
 			</div>
 		</div>
 	</div>
+</section>
 
-	<!------Contact Me------>
-	<div class="contact-me">
-		<p>Let Me Get You A Beautiful Website.</p>
-		<a class="button-two" href="#">Hire Me</a>
-	</div>
 
 	<!------footer start--------->
-	<footer>
-		<p>Tahmid Ahmed</p>
+	<footer id = "contact">
+		<p>H&D</p>
 		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
 		<div class="social">
 			<a href="#"><i class="fab fa-facebook-f"></i></a>
 			<a href="#"><i class="fab fa-instagram"></i></a>
 			<a href="#"><i class="fab fa-dribbble"></i></a>
 		</div>
-		<p class="end">CopyRight By Tahmid Ahmed</p>
+		<p class="end">CopyRight By Alex Rolls</p>
 	</footer>
 </body>
 </html>
