added dropdown Navbar

--- a/website code/index.html
+++ b/website code/index.html
@@ -21,7 +21,17 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href = #service class ="backgroundsquare">Services</a></li>
-				<li><a href= "furnture.html">About Us</a></li>
+				<li>
+					<div class="dropdown">
+					<button class="dropbtn">About Us
+					<i class="fa fa-caret-down"></i>
+				</button>
+					<div class="dropdown-content">
+					<a href= "furnture.html">Furnture service</a>
+					<a href= "tutors.html">Tutorial service</a>
+				  </div>
+				  </div>
+				</li>
 				<li><a href= #contact>Contact Us</a></li>
 			</ul>
 			<a href="#" class="btn">EN/中</a>
@@ -32,8 +42,6 @@
 			<h1>H<span>&</span>D</h1>
 			<h3>More than life.</h3>
 		</div>
-		
-			
 		
 	</div>
 
