--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -15,18 +15,35 @@
 
 	<div class="hero">
 		<nav>
-			<h2 class="logo">H<span>&</span>D</h2>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a  href = #service class ="backgroundsquare">Services</a></li>
-				<li><a  href="#">About Us</a></li>
-				<li><a href="#">Contact Us</a></li>
+			<li><a href="index.html" class="logo">H<span>&</span>D</a></li>
+			</ul>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href = #service class ="backgroundsquare">Services</a></li>
+				<li>
+					<div class="dropdown">
+					<button class="dropbtn">About Us
+					<i class="fa fa-caret-down"></i>
+				</button>
+					<div class="dropdown-content">
+					<a href= "furnture.html">Furnture service</a>
+					<a href= "tutors.html">Tutorial service</a>
+				  </div>
+				  </div>
+				</li>
+				<li><a href= #contact>Contact Us</a></li>
 			</ul>
 			<a href="#" class="btn">EN/中</a>
-		</nav>		
+		</nav>
+
+		<div class="content">
+			
+			<h1>H<span>&</span>D</h1>
+			<h3>More than life.</h3>
+		</div>
 		
 	</div>
-
     	<!----About section start---->
 	<section class="about">
 		<div class="main">
