--- a/website code/furnture.html
+++ b/website code/furnture.html
@@ -16,13 +16,23 @@
 	<div class="hero">
 		<nav>
 			<ul>
-                <li><a href="index.html" class="logo">H<span>&</span>D</a></li>
-            </ul>
+			<li><a href="index.html" class="logo">H<span>&</span>D</a></li>
+			</ul>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href = #service class ="backgroundsquare">Services</a></li>
-				<li><a href= "furnture.html">About Us</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li>
+					<div class="dropdown">
+					<button class="dropbtn">About Us
+					<i class="fa fa-caret-down"></i>
+				</button>
+					<div class="dropdown-content">
+					<a href= "furnture.html">Furnture service</a>
+					<a href= "tutors.html">Tutorial service</a>
+				  </div>
+				  </div>
+				</li>
+				<li><a href= #contact>Contact Us</a></li>
 			</ul>
 			<a href="#" class="btn">EN/中</a>
 		</nav>
@@ -33,10 +43,7 @@
 			<h3>More than life.</h3>
 		</div>
 		
-			
-		
 	</div>
-
     	<!----About section start---->
 	<section class="about">
 		<div class="main">
