--- a/website code/furnture.html
+++ b/website code/furnture.html
@@ -9,9 +9,21 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <script src="js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 	<!----hero Section start---->
+
+	<script>
+		function showContactDetail(){
+			$('#contact-detail').fadeIn();
+		}
+
+		function closeContactDetail(){
+			$('#contact-detail').fadeOut();
+		}
+	</script>
+
 
 	<div class="hero">
 		<nav>
@@ -36,23 +48,33 @@
 			</ul>
 			<a href="#" class="btn">EN/中</a>
 		</nav>
-
-		<div class="content">
+		<div class="subWebContent">
 			
 			<h1>H<span>&</span>D</h1>
-			<h3>More than life.</h3>
+			<h3>墨尔本专业家具拼装</h3>
 		</div>
 		
 	</div>
     	<!----About section start---->
 	<section class="about">
 		<div class="main">
-			<img src="img/main-img.png">
-			<div class="about-text">
-				<h2>About Me</h2>
-				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<button type="button">Let's Talk</button>
+			<img src="img/furniturevan.png">
+			<div class="subWeb-about-text">
+				<h2>专业家具拼装服务</h2>
+				<h5>专注于提供墨尔本地区最顶级的家具拼装服务</h5>
+				<p>服务范围:IKEA提货,家具拆装,长短期行李寄存
+					服务准点，为您提供最优质的运送和家具拼装服务！</p>
+				<button type="button" onclick="showContactDetail()">立即预约</button>
 			</div>
 		</div>
+
+		<div id="contact-detail" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 50px; display: none;">
+			<p class="contactDetailP">联系方式:
+				微信:13143542183
+				Email:gilolojhua@gmail.com</p>
+			<img src="img/tutQRcode.png" width="100" height="100">
+			<div><button type="button" onclick="closeContactDetail()" style="text-align: center">关闭</button></div>
+		</div>
 	</section>
+</body>
+</html>
