--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -9,9 +9,22 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <script src="js/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
 	<!----hero Section start---->
+
+	<script>
+		function showQRcode(){
+			$('#QRcode').fadeIn();
+		}
+
+		function closeQRcode(){
+			$('#QRcode').fadeOut();
+		}
+	</script>
+
 
 	<div class="hero">
 		<nav>
@@ -37,22 +50,37 @@
 			<a href="#" class="btn">EN/中</a>
 		</nav>
 
-		<div class="content">
+		<div class="subWebContent">
 			
 			<h1>H<span>&</span>D</h1>
-			<h3>More than life.</h3>
+			<h2>留学生私人定制1v1辅导</h2>
+			<h3>高效定制学习,只学不会的,只学不考的。H&D满足学习方面的所有要求</h3>
 		</div>
 		
 	</div>
     	<!----About section start---->
 	<section class="about">
 		<div class="main">
-			<img src="img/main-img.png">
-			<div class="about-text">
-				<h2>About Me</h2>
-				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<button type="button">Let's Talk</button>
+			<img src="img/tut1.jpg">
+			<div class="subWeb-about-text">
+				<h2>Maurice</h2>
+				<h5>Monash IT 专业高分天才 Tutor</h5>
+				<p>IT大三学长,software development相关科目都获得HD,近年开始进行1v1辅导,熟知重难点、应对技巧,擅长coding辅导,始终保持高好评率。</p>
+				<p>联系方式:
+					 微信:13143542183
+					 Email:gilolojhua@gmail.com
+				</p>
+				<button type="button" onclick="showQRcode()">获取微信二维码预约</button>
 			</div>
 		</div>
+
+		<div id="QRcode" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 50px; display: none;">
+			<img src="img/tutQRcode.png">
+			<div><button type="button" onclick="closeQRcode()" style="text-align: center">关闭</button></div>
+		</div>
+
+		
 	</section>
+	
+</body>
+</html>
