adding the contact infomation

--- a/website code/furnture.html
+++ b/website code/furnture.html
@@ -64,11 +64,17 @@
 				<h5>专注于提供墨尔本地区最顶级的家具拼装服务</h5>
 				<p>服务范围:IKEA提货,家具拆装,长短期行李寄存
 					服务准点，为您提供最优质的运送和家具拼装服务！</p>
+                <p> 
+                    组装安装家用及复杂结构家具， 所有项目会由本公司承包且分配给员工执行。对于宜家等品牌来说，正规家具组装技术可以延长家具使用的寿命
+                </p>
+                <p>
+                    Assemble and install domestic and complex structure furniture. The furniture assembly technic is to extend the life span of furniture products. 
+                </p>
 				<button type="button" onclick="showContactDetail()">立即预约</button>
 			</div>
 		</div>
 
-		<div id="contact-detail" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 50px; display: none;">
+		<div id="contact-detail" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 38px; display: none;">
 			<p class="contactDetailP">联系方式:
 				微信:13143542183
 				Email:gilolojhua@gmail.com</p>
