--- a/website code/index.html
+++ b/website code/index.html
@@ -45,18 +45,6 @@
 		
 	</div>
 
-	<!----About section start---->
-	<section class="about">
-		<div class="main">
-			<img src="img/main-img.png">
-			<div class="about-text">
-				<h2>About Me</h2>
-				<h5>Developer <span>& Designer</span></h5>
-				<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.I can provide clean code and pixel perfect design. I also make the website more & more interactive with web animations.A responsive design makes your website accessible to all users, regardless of their device.</p>
-				<button type="button">Let's Talk</button>
-			</div>
-		</div>
-	</section>
 
 	<!-----service section start----------->
 <section  id = "service">
@@ -69,39 +57,29 @@
 		<div class="box">
 			<div class="card">
 				<i class="fas fa-bars"></i>
-				<h5>Web Development</h5>
+				<h5>Furnture Assembly</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p>专注于提供墨尔本地区最专业的家具拼装服务,以及家具运送服务</p>
 
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href=furnture.html>Read More</a>
 					</p>
 				</div>
 			</div>
 
 			<div class="card">
 				<i class="far fa-user"></i>
-				<h5>Web Development</h5>
+				<h5>Tutors</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p>高效定制学习,只学不会的,只学考的。H&D满足学习方面的所有要求</p>
 
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href=tutors.html>Read More</a>
 					</p>
 				</div>
 			</div>
 
-			<div class="card">
-				<i class="far fa-bell"></i>
-				<h5>Web Development</h5>
-				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-
-					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
-					</p>
-				</div>
-			</div>
+			
 		</div>
 	</div>
 </section>
@@ -109,13 +87,14 @@
 
 	<!------footer start--------->
 	<footer id = "contact">
-		<p>H&D</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
-		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-dribbble"></i></a>
-		</div>
+		<p>H<span>&</span>D</p>
+		<p>For more information, please contact our manager :)</p>
+		<p class="contactDetailP">联系方式:
+			Wechat:13143542183
+			Email:gilolojhua@gmail.com
+			phone: 0401562682
+
+		</p>
 		<p class="end">CopyRight By Alex Rolls</p>
 	</footer>
 </body>
