--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -54,7 +54,7 @@
 			
 			<h1>H<span>&</span>D</h1>
 			<h2>留学生私人定制1v1辅导</h2>
-			<h3>高效定制学习,只学不会的,只学不考的。H&D满足学习方面的所有要求</h3>
+			<h3>高效定制学习,只学不会的,只学考的。H&D满足学习方面的所有要求</h3>
 		</div>
 		
 	</div>
