--- a/website code/index.html
+++ b/website code/index.html
@@ -8,10 +8,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="js/jquery-3.6.0.min.js"></script>
 
 </head>
 <body>
 	<!----hero Section start---->
+	<script>
+		function showContactDetail(){
+			$('#contact-detail').fadeIn();
+		}
+
+		function closeContactDetail(){
+			$('#contact-detail').fadeOut();
+		}
+	</script>
+
 
 	<div class="hero">
 		<nav>
@@ -93,8 +104,12 @@
 			Wechat:13143542183
 			Email:gilolojhua@gmail.com
 			phone: 0401562682
-
 		</p>
+		<button type="button" onclick="showContactDetail()">获取微信二维码预约</button>
+		<div id="contact-detail" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 70px; display: none;">
+			<img src="img/tutQRcode.png" width=30% height=50%>
+			<div><button type="button" onclick="closeContactDetail()" style="text-align: center">关闭</button></div>
+		</div>
 		<p class="end">CopyRight By Alex Rolls</p>
 	</footer>
 </body>
