stretching the font

--- a/website code/index.html
+++ b/website code/index.html
@@ -67,7 +67,11 @@
 				</li>
 				<li><a href= #contact>Contact Us</a></li>
 			</ul>
-			<div><a class="btn" onclick="getLanguage('en')" id="en">EN</a><span>/</span><a class="btn" onclick="getLanguage('cn')" id="cn">中</a></div>
+			<div>
+				<a class="btn" onclick="getLanguage('en')" id="en">EN</a>
+				<span>/</span>
+				<a class="btn" onclick="getLanguage('cn')" id="cn">中</a>
+			</div>
 		</nav>
 
 		<div class="content">
