--- a/website code/index.html
+++ b/website code/index.html
@@ -27,7 +27,7 @@
 
 		function getLanguage(lang) {
 			clearLanguage();
-
+			
 			$.ajax({
 				url: 'language/' + lang + '.json',
 				dataType: 'json',
@@ -92,13 +92,13 @@
 
 		<div class="box">
 			<div class="card">
-				<i class="fas fa-bars"></i>
-				<h5>Furnture Assembly</h5>
-				<div class="pra">
-					<p>专注于提供墨尔本地区最专业的家具拼装服务,以及家具运送服务</p>
+				<i class="fas fa-bars" ></i>
+				<h5 id= furnture_assembly_tag>Furnture Assembly</h5>
+				<div class="pra" id = pra_tag >
+					<p>Providing the most professional furniture assembly services in Melbourne, as well as furniture delivery services</p>
 
 					<p style="text-align: center;">
-						<a class="button" href=furnture.html>Read More</a>
+						<a class="button" href=furnture.html id = read_more>Read More</a>
 					</p>
 				</div>
 			</div>
@@ -106,11 +106,11 @@
 			<div class="card">
 				<i class="far fa-user"></i>
 				<h5>Tutors</h5>
-				<div class="pra">
-					<p>高效定制学习,只学不会的,只学考的。H&D满足学习方面的所有要求</p>
+				<div class="pra" id = pra_tag_tutor>
+					<p>They help students to improve their grades, understand difficult concepts, receive extra help to catch up with classroom lessons.</p>
 
 					<p style="text-align: center;">
-						<a class="button" href=tutors.html>Read More</a>
+						<a class="button" href=tutors.html id = read_more_tut>Read More</a>
 					</p>
 				</div>
 			</div>
