--- a/website code/index.html
+++ b/website code/index.html
@@ -132,8 +132,8 @@
 		</p>
 		<button type="button" onclick="showContactDetail()" id= "scan_code" >Scan QR code</button>
 		<div id="contact-detail" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 70px; display: none;">
-			<img src="img/tutQRcode.png" width=30% height=50%>
-			<div><button type="button" onclick="closeContactDetail()" style="text-align: center">关闭</button></div>
+			<img src="img/tutQRcode.png" width=20% height=50%>
+			<div><button type="button" onclick="closeContactDetail()" style="text-align: center" id="close_detail">close</button></div>
 		</div>
 		<p class="end">CopyRight By Alex Rolls</p>
 	</footer>
