--- a/website code/tutor2.html
+++ b/website code/tutor2.html
@@ -25,7 +25,11 @@
 		}
 	</script>
 	<div class="main">
-		<img src="img/tut1.jpg">
+		<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored info-change" onclick="lastIntro()">
+			<i class="material-icons">&lt;</i>
+		</button>
+
+		<img src="img/tut2.jpg">
 		<div class="subWeb-about-text">
 			<h2>Max</h2>
 			<h5>Monash software engineering & commerce 双学位天才 Tutor</h5>
@@ -34,13 +38,17 @@
 				 微信:Nicholaslee0168
 				 Email:nicholasleeeman@gmail.com
 			</p>
-			<button type="button" onclick="showQRcode()">获取微信二维码预约</button>
+			<button type="button" onclick="showQRcode(), changeStopFlag()">获取微信二维码预约</button>
 		</div>
+
+		<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored info-change"  onclick="nextIntro()">
+			<i class="material-icons">&gt;</i>
+		</button>
 	</div>
 
 	<div id="QRcode" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 50px; display: none;">
-		<img src="img/tutQRcode2.png">
-		<div><button type="button" onclick="closeQRcode()" style="text-align: center">关闭</button></div>
+		<img src="img/tutQRcode2.jpg">
+		<div><button type="button" onclick="closeQRcode(), changeStopFlag()" style="text-align: center">关闭</button></div>
 	</div>
 </body>
 </html>
