--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -1,92 +1,144 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Life solver website</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Life solver website</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/translate.js"></script>
 
 </head>
+
 <body>
-	<!----hero Section start---->
+    <!----hero Section start---->
 
-	<script>
-		$(document).ready(function(){
-			$("#tutor_intro").load("tutor1.html");
-		});
+    <script>
+        $(document).ready(function () {
+            $("#tutor_intro").load("tutor1.html");
+        });
 
-		var i = 1;
-		var stopFlag = false;
-		var timeId = setInterval(function(){
-			if(!stopFlag){
-				$("#tutor_intro").load("tutor"+i+".html");
-				i++;
-				if(i>2){
-					i = 1;
-				}
-			}
-		}, 5000)
+        var i = 1;
+        var stopFlag = false;
+        var timeId = setInterval(function () {
+            if (!stopFlag) {
+                $("#tutor_intro").load("tutor" + i + ".html");
+                i++;
+                if (i > 2) {
+                    i = 1;
+                }
+            }
+        }, 5000)
 
-		function lastIntro() {
-			if(i = 1){
-				$("#tutor_intro").load("tutor1.html");
-			} else if(i = 2) {
-				$("#tutor_intro").load("tutor1.html");
-				i--;
-			}
+        function lastIntro() {
+            if (i = 1) {
+                $("#tutor_intro").load("tutor1.html");
+            } else if (i = 2) {
+                $("#tutor_intro").load("tutor1.html");
+                i--;
+            }
+        }
+
+        function nextIntro() {
+            if (i = 2) {
+                $("#tutor_intro").load("tutor2.html");
+            } else if (i = 1) {
+                $("#tutor_intro").load("tutor2.html");
+                i++;
+            }
+        }
+
+        function changeStopFlag() {
+            stopFlag = !stopFlag;
+        }
+        function showContactDetail(){
+			$('#contact-detail').fadeIn();
 		}
 
-		function nextIntro() {
-			if(i = 2){
-				$("#tutor_intro").load("tutor2.html");
-			} else if(i = 1) {
-				$("#tutor_intro").load("tutor2.html");
-				i++;
-			}
+		function closeContactDetail(){
+			$('#contact-detail').fadeOut();
 		}
 
-		function changeStopFlag() {
-			stopFlag = !stopFlag;
+		function getLanguage(lang) {
+			clearLanguage();
+			
+			$.ajax({
+				url: 'language/' + lang + '.json',
+				dataType: 'json',
+				async: false,
+
+				// success: alert("success")
+				success: function (lang) { setLanguage(lang);}
+			});
+
+			$('#' + lang).css('background-color', '#f9004d');
 		}
-	</script>
+    </script>
 
 
-	<div class="hero">
-		<nav>
-			<ul>
-			<li><a href="index.html" class="logo">H<span>&</span>D</a></li>
-			</ul>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href = #service class ="backgroundsquare">Services</a></li>
-				<li>
-					<div class="dropdown">
-					<button class="dropbtn">About Us
-					<i class="fa fa-caret-down"></i>
-				</button>
-					<div class="dropdown-content">
-					<a href= "furnture.html">Furnture service</a>
-					<a href= "tutors.html">Tutorial service</a>
-				  </div>
-				  </div>
-				</li>
-				<li><a href= #contact>Contact Us</a></li>
-			</ul>
-			<a href="#" class="btn">EN/中</a>
-		</nav>
+    <div class="hero">
+        <nav>
+            <ul>
+                <li><a href="index.html" class="logo">H<span>&</span>D</a></li>
+            </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href=#service class="backgroundsquare">Services</a></li>
+                <li>
+                    <div class="dropdown">
+                        <button class="dropbtn">About Us
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                            <a href="furnture.html" id="furniture_tag">Furniture service</a>
+                            <a href="tutors.html" id="tutorial_tag">Tutorial service</a>
+                        </div>
+                    </div>
+                </li>
+                <li><a href=#contact>Contact Us</a></li>
+            </ul>
+            <div>
+                <a class="btn" onclick="getLanguage('en')" id="en">EN</a>
+                <span>/</span>
+                <a class="btn" onclick="getLanguage('cn')" id="cn">中</a>
+            </div>
+        </nav>
 
-		<div class="subWebContent">
-			<h1>H<span>&</span>D</h1>
-			<h2>留学生私人定制1v1辅导</h2>
-			<h3>高效定制学习,只学不会的,只学考的。H&D满足学习方面的所有要求</h3>
-		</div>
-	</div>
-    	<!----tutor_intro section start---->
-	<div id="tutor_intro" class="about"></div>
+        <div class="content">
+            <h1>H<span>&</span>D</h1>
+            <h3>More than life.</h3>
+
+        </div>
+    </div>
+    <!----tutor_intro section start---->
+    <div id="tutor_intro" class="about"></div>
+    <!------footer start--------->
+    <footer id="contact">
+        <p>H<span>&</span>D</p>
+        <p>For more information, please contact our manager :)</p>
+        <p class="contactDetailP" id=contact_detail>
+            Wechat:13143542183
+            Email:gilolojhua@gmail.com
+            phone: 0401562682
+        </p>
+        <button type="button" onclick="showContactDetail()" id="scan_code">Scan QR code</button>
+        <div id="contact-detail"
+            style="position: fixed; text-align: center; width: 100%; height: 100%; top: 70px; display: none;">
+            <img src="img/tutQRcode.png" width=20% height=50%>
+            <div><button type="button" onclick="closeContactDetail()" style="text-align: center"
+                    id="close_detail">close</button></div>
+        </div>
+        <p class="end">CopyRight By Alex Rolls</p>
+    </footer>
 </body>
+
 </html>
