--- a/website code/tutor1.html
+++ b/website code/tutor1.html
@@ -51,11 +51,11 @@
 			<h2>Maurice</h2>
 			<h5 id="tutor1_title">Monash IT 专业高分天才 Tutor</h5>
 			<p id="tutor1_intro">IT大三学长,software development相关科目都获得HD,近年开始进行1v1辅导,熟知重难点、应对技巧,擅长coding辅导,始终保持高好评率。</p>
-			<p>联系方式:
+			<p id="tutor1_contact">联系方式:
 				 微信:13143542183
 				 Email:gilolojhua@gmail.com
 			</p>
-			<button type="button" onclick="showQRcode(), changeStopFlag()">获取微信二维码预约</button>
+			<button type="button" onclick="showQRcode(), changeStopFlag()" id="scan_tut_code">获取微信二维码预约</button>
 		</div>
 
 
@@ -66,7 +66,7 @@
 
 	<div id="QRcode" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 50px; display: none;">
 		<img src="img/tutQRcode1.png">
-		<div><button type="button" onclick="closeQRcode(), changeStopFlag()" style="text-align: center">关闭</button></div>
+		<div><button type="button" onclick="closeQRcode(), changeStopFlag()" style="text-align: center" id="close_btn">关闭</button></div>
 	</div>
 </body>
 </html>
