translation is done, but bugs still exist

--- a/website code/tutor1.html
+++ b/website code/tutor1.html
@@ -34,13 +34,11 @@
 		<img src="img/tut1.jpg">
 		<div class="subWeb-about-text">
 			<h2>Maurice</h2>
-			<h5 id="tutor1_title">Monash IT 专业高分天才 Tutor</h5>
-			<p id="tutor1_intro">IT大三学长,software development相关科目都获得HD,近年开始进行1v1辅导,熟知重难点、应对技巧,擅长coding辅导,始终保持高好评率。</p>
-			<p id="tutor1_contact">联系方式:
-				 微信:13143542183
-				 Email:gilolojhua@gmail.com
+			<h5 id="tutor1_title">Monash IT Tutor</h5>
+			<p id="tutor1_intro">Now I am a junior in Monash University with a double degree in Software Engineering & Commerce. In recent years, I began to take 1V1 tutoring. I am familiar with the key and difficult points and examination skills, and I am good at giving examples to make knowledge points easier to understand and keep high praise rate. </p>
+			<p id="tutor1_contact">contact info: Wechat:13143542183 Email:gilolojhua@gmail.com phone
 			</p>
-			<button type="button" onclick="showQRcode(), changeStopFlag()" id="scan_tut_code">获取微信二维码预约</button>
+			<button type="button" onclick="showQRcode(), changeStopFlag()" id="scan_tut_code">scan QR code</button>
 		</div>
 
 
