--- a/website code/tutor2.html
+++ b/website code/tutor2.html
@@ -32,13 +32,11 @@
 		<img src="img/tut2.jpg">
 		<div class="subWeb-about-text">
 			<h2>Max</h2>
-			<h5  id="tutor2_title">Monash software engineering & commerce 双学位天才 Tutor</h5>
-			<p id="tutor2_intro">现是Monash大学大三学长,software engineering & commerce 双学位,近年开始进行1v1辅导,熟知重难点、考试技巧,擅长举例子使知识点更加通俗易懂,保持超高好评率。</p>
-			<p id="tutor2_contact">联系方式:
-				 微信:Nicholaslee0168
-				 Email:nicholasleeeman@gmail.com
+			<h5  id="tutor2_title">Monash software engineering & commerce double degrees Tutor</h5>
+			<p id="tutor2_intro">Now I am a junior in Monash University with a double degree in Software Engineering & Commerce. In recent years, I began to take 1V1 tutoring. I am familiar with the key and difficult points and examination skills, and I am good at giving examples to make knowledge points easier to understand and keep high praise rate. </p>
+			<p id="tutor2_contact">contact info: Wechat:Nicholaslee0168 Email:nicholasleeeman@gmail.com phone number:0401562682
 			</p>
-			<button type="button" onclick="showQRcode(), changeStopFlag()" id="scan_tut_code">获取微信二维码预约</button>
+			<button type="button" onclick="showQRcode(), changeStopFlag()" id="scan_tut_code">scan QR code</button>
 		</div>
 
 		<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored info-change"  onclick="nextIntro()">
