--- a/website code/index.html
+++ b/website code/index.html
@@ -44,7 +44,8 @@
 			// });
 		}
 
-		var language;
+		localStorage.setItem('language', 'en');
+
 		function setLocalStorageLanguage(lang) {
 			clearLanguage();
 
