--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -25,7 +25,24 @@
     <script>
         $(document).ready(function () {
             $("#tutor_intro").load("tutor1.html");
+
+            var lang = localStorage.getItem('language');
+
+			$.ajax({
+				url: 'language/' + lang + '.json',
+				dataType: 'json',
+				async: false,
+
+				// success: alert("success")
+				success: function (lang) { setLanguage(lang);}
+			});
+
+			$('#' + lang).css('background-color', '#f9004d');
         });
+
+        function sleep(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
 
         var i = 1;
         var stopFlag = false;
@@ -37,21 +54,23 @@
                     i = 1;
                 }
             }
-        }, 5000)
+        }, 2000)
 
         function lastIntro() {
-            if (i = 1) {
-                $("#tutor_intro").load("tutor1.html");
-            } else if (i = 2) {
+            if (i == 1) {
+                $("#tutor_intro").load("tutor2.html");
+               // i = 2;
+            } else if (i == 2) {
                 $("#tutor_intro").load("tutor1.html");
                 i--;
             }
         }
 
         function nextIntro() {
-            if (i = 2) {
-                $("#tutor_intro").load("tutor2.html");
-            } else if (i = 1) {
+            if (i == 2) {
+                $("#tutor_intro").load("tutor1.html");
+               // i = 1;
+            } else if (i == 1) {
                 $("#tutor_intro").load("tutor2.html");
                 i++;
             }
@@ -68,16 +87,16 @@
 			$('#contact-detail').fadeOut();
 		}
 
-		function getLanguage(lang) {
+		function setLocalStorageLanguage(lang) {
 			clearLanguage();
-			
+
+			localStorage.setItem('language', lang);
+
 			$.ajax({
-				url: 'language/' + lang + '.json',
+				url:  'language/' +  localStorage.getItem('language') + '.json', 
 				dataType: 'json',
 				async: false,
-
-				// success: alert("success")
-				success: function (lang) { setLanguage(lang);}
+				success: function (lang) { setLanguage(lang); } 
 			});
 
 			$('#' + lang).css('background-color', '#f9004d');
@@ -107,9 +126,9 @@
                 <li><a href=#contact>Contact Us</a></li>
             </ul>
             <div>
-                <a class="btn" onclick="getLanguage('en')" id="en">EN</a>
+                <a class="btn" onclick="setLocalStorageLanguage('en')" id="en">EN</a>
                 <span>/</span>
-                <a class="btn" onclick="getLanguage('cn')" id="cn">中</a>
+                <a class="btn" onclick="setLocalStorageLanguage('cn')" id="cn">中</a>
             </div>
         </nav>
 
@@ -133,7 +152,7 @@
         <button type="button" onclick="showContactDetail()" id="scan_code">Scan QR code</button>
         <div id="contact-detail"
             style="position: fixed; text-align: center; width: 100%; height: 100%; top: 70px; display: none;">
-            <img src="img/tutQRcode.png" width=20% height=50%>
+            <img src="img/tutQRcode1.png" width=20% height=50%>
             <div><button type="button" onclick="closeContactDetail()" style="text-align: center"
                     id="close_detail">close</button></div>
         </div>
