--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -40,39 +40,50 @@
 			$('#' + lang).css('background-color', '#f9004d');
         });
 
-        function sleep(ms) {
-            return new Promise(resolve => setTimeout(resolve, ms));
+//参数n为休眠时间，单位为毫秒:
+        function sleep(n) {
+            var start = new Date().getTime();
+        //  console.log('休眠前：' + start);
+            while (true) {
+                if (new Date().getTime() - start > n) {
+                    break;
+                }
+            }
+        // console.log('休眠后：' + new Date().getTime());
         }
 
         var i = 1;
         var stopFlag = false;
         var timeId = setInterval(function () {
             if (!stopFlag) {
+                sleep(1000);
                 $("#tutor_intro").load("tutor" + i + ".html");
                 i++;
                 if (i > 2) {
                     i = 1;
                 }
             }
-        }, 2000)
+        }, 5000)
 
         function lastIntro() {
             if (i == 1) {
                 $("#tutor_intro").load("tutor2.html");
-               // i = 2;
-            } else if (i == 2) {
-                $("#tutor_intro").load("tutor1.html");
+                i = 2;
+            } else {
                 i--;
+               // alert("tutor"+i+".html");
+                $("#tutor_intro").load("tutor"+i+".html");
             }
         }
 
         function nextIntro() {
             if (i == 2) {
                 $("#tutor_intro").load("tutor1.html");
-               // i = 1;
-            } else if (i == 1) {
-                $("#tutor_intro").load("tutor2.html");
+                i = 1;
+            } else {
                 i++;
+                // alert("tutor"+i+".html");
+                $("#tutor_intro").load("tutor"+i+".html");
             }
         }
 
