update index.html nav part

--- a/website code/index.html
+++ b/website code/index.html
@@ -69,10 +69,10 @@
 
 	<div class="hero">
 		<nav>
-			<ul>
+			<ul class="company_name">
 			<li><a href="index.html" class="logo">H<span>&</span>D</a></li>
 			</ul>
-			<ul>
+			<ul class="navgation_list">
 				<li><a href="index.html">Home</a></li>
 				<li><a href = #service class ="backgroundsquare">Services</a></li>
 				<li>
@@ -88,7 +88,7 @@
 				</li>
 				<li><a href= #contact>Contact Us</a></li>
 			</ul>
-			<div>
+			<div class="translate_btn">
 				<a class="btn" onclick="setLocalStorageLanguage('en')" id="en">EN</a>
 				<span>/</span>
 				<a class="btn" onclick="setLocalStorageLanguage('cn')" id="cn">中</a>
