--- a/website code/index.html
+++ b/website code/index.html
@@ -130,10 +130,13 @@
 
 	<footer id = "contact" class="footer">
 		<p class="footer-title">H<span>&</span>D</p>
-		<p class="footer-info">For more information, please contact our manager :)</p>
+		<p class="footer-info">For more information 
+			please contact our manager :)</p>
 		<p class="contactDetailP" id = contact_detail>
 			Wechat:13143542183
+			<br>
 			Email:gilolojhua@gmail.com
+			<br>
 			phone: 0401562682
 		</p>
 		<button type="button" onclick="showContactDetail()" id= "scan_code" >Scan QR code</button>
