--- a/website code/index.html
+++ b/website code/index.html
@@ -130,22 +130,31 @@
 
 	<footer id = "contact" class="footer">
 		<p class="footer-title">H<span>&</span>D</p>
-		<p class="footer-info">For more information 
-			please contact our manager :)</p>
-		<p class="contactDetailP" id = contact_detail>
+		<div class="col-1">
+			<p class="footer-info">For more information please contact our manager :)</p></div>
+
+		<p class="contactDetailP" id = "contact_detail">
 			Wechat:13143542183
 			<br>
 			Email:gilolojhua@gmail.com
 			<br>
 			phone: 0401562682
 		</p>
-		<button type="button" onclick="showContactDetail()" id= "scan_code" >Scan QR code</button>
-		<div id="contact-detail" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 70px; display: none;">
+		<div><button type="button" onclick="showContactDetail()" id= "scan_code" class="scan_code" >Scan QR code</button></div>
+	
+		<div id="contact-detail">
 			<img src="img/tutQRcode1.png" width=20% height=50%>
-			<div><button type="button" onclick="closeContactDetail()" style="text-align: center" id="close_detail">close</button></div>
-		</div>
-		<p class="end">CopyRight By Alex Rolls</p>
+		<div><button type="button" onclick="closeContactDetail()" style="text-align: center" id="close_detail">close</button></div></div>
+		
+		<section class="social__media">
+			<div class="social__media--wrap">
+			  <p class="website__rights">CopyRight By Alex Rolls</p>
+			</div>
+		</section>
+	
 	</footer>
+
+	
 </body>
 
   <script src="js/menutran.js"></script>
