--- a/website code/index.html
+++ b/website code/index.html
@@ -56,7 +56,7 @@
 			<ul>
 				<li><a href="index.html" class="logo">H<span>&</span>D</a></li>
 				</ul>
-				<div>
+				<div id="EN_to_CN">
 					<a class="btn" onclick="setLocalStorageLanguage('en')" id="en">EN</a>
 					<span>/</span>
 					<a class="btn" onclick="setLocalStorageLanguage('cn')" id="cn">中</a>
@@ -90,11 +90,11 @@
 
 		</div>
 	</header>
-<!-- 
-<section  id = "service">
+
+<div  id = "service">
 
 	<div class="service">
-		<div class="title">
+		<div  class="title">
 			<h2>Our Services</h2>
 		</div>
 
@@ -125,7 +125,7 @@
 
 		</div>
 	</div>
-</section> -->
+</div>
 
 
 	<footer id = "contact" class="footer">
