--- a/website code/furnture.html
+++ b/website code/furnture.html
@@ -57,40 +57,45 @@
 	</script>
 
 
-	<div class="hero">
-		<nav>
+	<header class="hero header">
+		<nav class="navbar">
 			<ul>
-			<li><a href="index.html" class="logo">H<span>&</span>D</a></li>
-			</ul>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href = #service class ="backgroundsquare">Services</a></li>
-				<li>
-					<div class="dropdown">
-					<button class="dropbtn">About Us
-					<i class="fa fa-caret-down"></i>
-				</button>
-					<div class="dropdown-content">
-					<a href= "furnture.html" id="furniture_tag">Furniture service</a>
-					<a href= "tutors.html" id="tutorial_tag">Tutorial service</a>
-				  </div>
-				  </div>
-				</li>
-				<li><a href= #contact>Contact Us</a></li>
-			</ul>
-			<div>
-				<a class="btn" onclick="setLocalStorageLanguage('en')" id="en">EN</a>
-				<span>/</span>
-				<a class="btn" onclick="setLocalStorageLanguage('cn')" id="cn">中</a>
-			</div>
-		</nav>
+				<li><a href="index.html" class="logo">H<span>&</span>D</a></li>
+				</ul>
+				<div id="EN_to_CN">
+					<a class="btn" onclick="setLocalStorageLanguage('en')" id="en">EN</a>
+					<span>/</span>
+					<a class="btn" onclick="setLocalStorageLanguage('cn')" id="cn">中</a>
+				</div>
+				<ul class="nav-menu">
+					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+					<li class="nav-item"><a href = #service class ="nav-link">Services</a></li>
+					<li class="nav-item">
+						<div class="dropdown">
+						<button class="dropbtn" class="nav-link">About Us
+						<i class="fa fa-caret-down"></i>
+					</button>
+						<div class="dropdown-content">
+						<a href= "furnture.html" id="furniture_tag">Furniture service</a>
+						<a href= "tutors.html" id="tutorial_tag">Tutorial service</a>
+					  </div>
+					  </div>
+					</li>
+					<li class="nav-item"><a href= #contact class="nav-link">Contact Us</a></li>
+				</ul>
+				<div class="hamburger">
+					<span class="bar"></span>
+					<span class="bar"></span>
+					<span class="bar"></span>
+				</div>
+        </nav>
 
 		<div class="content">
 			<h1>H<span>&</span>D</h1>
 			<h3>More than life.</h3>
 
 		</div>
-	</div>
+	</header>
     	<!----About section start---->
 	<section class="about">
 		<div class="main">
@@ -106,20 +111,32 @@
 	</section>
 
 		<!------footer start--------->
-		<footer id = "contact">
-			<p>H<span>&</span>D</p>
-			<p>For more information, please contact our manager :)</p>
-			<p class="contactDetailP" id = contact_detail>
+		<footer id = "contact" class="footer">
+			<p class="footer-title">H<span>&</span>D</p>
+			<div class="col-1">
+				<p class="footer-info">For more information please contact our manager :)</p></div>
+	
+			<p class="contactDetailP" id = "contact_detail">
 				Wechat:13143542183
+				<br>
 				Email:gilolojhua@gmail.com
+				<br>
 				phone: 0401562682
 			</p>
-			<button type="button" onclick="showContactDetail()" id= "scan_code" >Scan QR code</button>
-			<div id="contact-detail" style="position: fixed; text-align: center; width: 100%; height: 100%; top: 70px; display: none;">
+			<div><button type="button" onclick="showContactDetail()" id= "scan_code" class="scan_code" >Scan QR code</button></div>
+		
+			<div id="contact-detail">
 				<img src="img/tutQRcode1.png" width=20% height=50%>
-				<div><button type="button" onclick="closeContactDetail()" style="text-align: center" id="close_detail">close</button></div>
-			</div>
-			<p class="end">CopyRight By Alex Rolls</p>
+			<div><button type="button" onclick="closeContactDetail()" style="text-align: center" id="close_detail">close</button></div></div>
+			
+			<section class="social__media">
+				<div class="social__media--wrap">
+				  <p class="website__rights">CopyRight By Alex Rolls</p>
+				</div>
+			</section>
+		
 		</footer>
 </body>
+
+<script src="js/menutran.js"></script>
 </html>
