--- a/website code/index.html
+++ b/website code/index.html
@@ -63,7 +63,7 @@
 				</div>
 				<ul class="nav-menu">
 					<li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href = #service class ="nav-link">Services</a></li>
+					<li class="nav-item"><a href = #service class ="nav-link backgroundsquare">Services</a></li>
 					<li class="nav-item">
 						<div class="dropdown">
 						<button class="dropbtn" class="nav-link">About Us
