--- a/website code/furnture.html
+++ b/website code/furnture.html
@@ -101,8 +101,9 @@
 	</header>
     	<!----About section start---->
 	<section class="about">
-		<div class="main">
-			<img src="img/furniturevan.png">
+		<div class="main box">
+			<div>
+			<img src="img/furniturevan.png"></div>
 			<div class="subWeb-about-text">
 				<h2 id=  "header_funiture">Professional furniture assembly</h2>
 				<h5 id = "furniture_content">Providing the most professional furniture assembly services in Melbourne. As well as furniture delivery services</h5>
