--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -168,11 +168,11 @@
 </header>
     <!----tutor_intro section start---->
     <div id="tutor_intro1" class="about">
-        <div class="main">
+        <div class="main box">
             <!-- <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored info-change" onclick="lastIntro()">
                 <i class="material-icons">&lt;</i>
             </button> -->
-            <img src="img/tut1.jpg">
+            <div><img src="img/tut1.jpg"></div>
             <div class="subWeb-about-text">
                 <h2>Maurice</h2>
                 <h5 id="tutor1_title">Monash IT Tutor</h5>
@@ -193,12 +193,13 @@
         </div>
     </div>
     <div id="tutor_intro2" class="about">
-        <div class="main">
+        <div class="main box">
             <!-- <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored info-change" onclick="lastIntro()">
                 <i class="material-icons">&lt;</i>
             </button> -->
     
-            <img src="img/tut2.jpg">
+            <div>
+            <img src="img/tut2.jpg"></div>
             <div class="subWeb-about-text">
                 <h2>Max</h2>
                 <h5  id="tutor2_title">Monash software engineering & commerce double degrees Tutor</h5>
