--- a/website code/tutors.html
+++ b/website code/tutors.html
@@ -152,6 +152,11 @@
                   </div>
                 </li>
                 <li class="nav-item"><a href= #contact class="nav-link">Contact Us</a></li>
+                <li id="EN_to_CN_Ham" class="nav-item">
+                    <a class="btn" onclick="setLocalStorageLanguage('en')"  id="en2">EN</a>
+                    <span class="EN_to_CN_span">/</span>
+                    <a class="btn" onclick="setLocalStorageLanguage('cn')"  id="cn2">中</a>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
