--- a/website code/index.html
+++ b/website code/index.html
@@ -108,7 +108,7 @@
 		<div class="box">
 			<div class="card">
 				<i class="fas fa-bars" ></i>
-				<h5 id= furnture_assembly_tag>Furnture Assembly</h5>
+				<h5 id= furnture_assembly_tag>Furniture Assembly</h5>
 				<div class="pra" >
 					<p id = pra_tag>Providing the most professional furniture assembly services in Melbourne, as well as furniture delivery services</p>
 
